borsh-derive/src/attribute_helpers/snapshots/borsh_derive__attribute_helpers__field__tests__schema_params_parsing_error2.snap
---
source: borsh-derive/src/attribute_helpers/field.rs
expression: err
---
Error(
    "malformed schema attribute, expected `schema(params = ..., with_funcs(...))`",
)
