borsh-derive/src/attribute_helpers/snapshots/borsh_derive__attribute_helpers__field__tests__schema_with_funcs_parsing-2.snap
---
source: borsh-derive/src/attribute_helpers/field.rs
expression: debug_print_tokenizable(with_funcs.definitions)
---
third_party_impl :: add_definitions_recursively :: < K , V >

