borsh-derive/src/attribute_helpers/snapshots/borsh_derive__attribute_helpers__field__tests__schema_with_funcs_parsing_error.snap
---
source: borsh-derive/src/attribute_helpers/field.rs
expression: err
---
Error(
    "both `declaration = ...` and `definitions = ...` have to be specified at the same time",
)
