borsh-derive/src/attribute_helpers/snapshots/borsh_derive__attribute_helpers__field__tests__ser_de_with_parsing1-2.snap
---
source: borsh-derive/src/attribute_helpers/field.rs
expression: debug_print_tokenizable(attrs.deserialize_with)
---
third_party_impl :: deserialize_third_party

